--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta
+      name="keywords"
+      content="software developer, desarrollo web, React, TypeScript, Python, NextJs"
+    />
+    <meta name="author" content="John Rodriguez" />
+    <meta
+      name="google-site-verification"
+      content="código de verificación de Google"
+    />
+    <meta name="format-detection" content="telephone=no" />
+    <meta
+      name="description"
+      content="Portafolio de John Rodriguez, software developer con experiencia en desarrollo de aplicaciones web en varios lenguajes de programación como JavaScript, Python y TypeScript."
+    />
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./src/assets/JohnRodriguez.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>John Dev | Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
